# zepton

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
paths/: pattern_simple.lua  red_cannon.lua  spawn_ramp.lua
resources/: zepton.html
src/: Logger.h  zepton.cpp  zepton.h
src/macro/: MovementManager.cpp  MovementManager.h  OCRInstance.cpp  OCRInstance.h  Player.cpp  Player.h  StatMonitor.cpp  StatMonitor.h  Zepton.cpp  Zepton.h
src/macro/ui/: CoreGui.cpp  CoreGui.h
